--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "9.0"
+        "phpunit/phpunit": "9.0",
+        "inpsyde/php-coding-standards": "^0.13.4"
     }
 }
